--- a/.github/workflows/ui-tests-1.yml
+++ b/.github/workflows/ui-tests-1.yml
@@ -1,4 +1,4 @@
-name: UI Tests 1
+name: UI tests for java-selenium-test-automation-framework
 
 on:
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run UI tests 1
+      - name: Run UI tests for java-selenium-test-automation-framework
         run: mvn -pl java-selenium-test-automation-framework test -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml -Denvironment=ENV1 -Dplatform=web -Dweb.browser=chrome -Dweb.grid=false -Dweb.debug=false -Dweb.headless=true
 
       - name: Upload Allure results
