--- a/.github/workflows/api-tests-1.yml
+++ b/.github/workflows/api-tests-1.yml
@@ -8,21 +8,42 @@ on:
 jobs:
   api-tests-1:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
 
       - name: Run API tests for java-selenium-test-automation-framework
-        run: mvn -pl java-selenium-test-automation-framework test -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/api/PET_STORE.xml -Denvironment=ENV1 -Dplatform=api -Dapi.debug=false
+        run: |
+          mvn -pl java-selenium-test-automation-framework test \
+          -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/api/PET_STORE.xml \
+          -Denvironment=ENV1 -Dplatform=api -Dapi.debug=false
 
-      - name: Upload Allure results
+      - name: Upload Allure results (artifact)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
+          name: allure-results-api-1
           path: java-selenium-test-automation-framework/allure-results
+
+      - name: Generate Allure HTML report
+        if: always()
+        run: |
+          mvn allure:report -pl java-selenium-test-automation-framework
+          mkdir -p allure-public/api-1
+          cp -r java-selenium-test-automation-framework/target/site/allure-maven-plugin/* allure-public/api-1/
+
+      - name: Deploy Allure report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-public
