--- a/.github/workflows/ui-tests-2.yml
+++ b/.github/workflows/ui-tests-2.yml
@@ -18,11 +18,29 @@ jobs:
           cache: maven
 
       - name: Run UI tests for java-playwright-test-automation-framework
-        run: mvn -pl java-playwright-test-automation-framework test -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml -Denvironment=ENV1 -Dplatform=web -Dweb.engine=firefox -Dweb.remote=false -Dweb.debug=false -Dweb.headless=true
+        run: |
+         mvn -pl java-playwright-test-automation-framework test \
+         -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml \
+         -Denvironment=ENV1 -Dplatform=web -Dweb.engine=firefox -Dweb.remote=false -Dweb.debug=false -Dweb.headless=true
 
-      - name: Upload Allure results
+      - name: Upload Allure results (artifact)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
+          name: allure-results-ui-2
           path: java-playwright-test-automation-framework/allure-results
+
+      - name: Generate Allure HTML report
+        if: always()
+        run: |
+          mvn allure:report -pl java-playwright-test-automation-framework
+          mkdir -p allure-public/ui-2
+          cp -r java-playwright-test-automation-framework/target/site/allure-maven-plugin/* allure-public/ui-2/
+
+      - name: Deploy Allure report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-public
