--- a/.github/workflows/api-tests-1.yml
+++ b/.github/workflows/api-tests-1.yml
@@ -44,6 +44,6 @@ jobs:
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_PAT }}
           publish_branch: gh-pages
           publish_dir: allure-public
