--- a/.github/workflows/ui-tests-2.yml
+++ b/.github/workflows/ui-tests-2.yml
@@ -1,46 +1,60 @@
-name: UI tests for java-playwright-test-automation-framework
+name: UI tests (Playwright framework)
 
 on:
+  push:
+    branches:
+      - main
+      - issue-*
+
   workflow_dispatch:
   schedule:
     - cron: '0 7 * * 1'   # 08:00 PL
 
-jobs:
-  ui-tests-2:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+permissions:
+  contents: write
 
-      - uses: actions/setup-java@v4
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
 
-      - name: Run UI tests for java-playwright-test-automation-framework
+      - name: Run UI tests
         run: |
          mvn -pl java-playwright-test-automation-framework test \
          -Dsurefire.suiteXmlFiles=src/test/resources/testSuites/web/PHP_TRAVELS.xml \
          -Denvironment=ENV1 -Dplatform=web -Dweb.engine=firefox -Dweb.remote=false -Dweb.debug=false -Dweb.headless=true
 
-      - name: Upload Allure results (artifact)
+      - name: Checkout gh-pages (history)
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/checkout@v4
         with:
-          name: allure-results-ui-2
-          path: java-playwright-test-automation-framework/allure-results
+          ref: gh-pages
+          path: gh-pages
+        continue-on-error: true
 
-      - name: Generate Allure HTML report
+      - name: Generate Allure report
         if: always()
-        run: |
-          mvn allure:report -pl java-playwright-test-automation-framework
-          mkdir -p allure-public/ui-2
-          cp -r java-playwright-test-automation-framework/target/site/allure-maven-plugin/* allure-public/ui-2/
+        uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: java-selenium-test-automation-framework/allure-results
+          gh_pages: gh-pages/api-tests-1
+          allure_history: allure-history/api-tests-1
+          keep_reports: 10
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Deploy report to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-public
+          publish_dir: gh-pages
