--- a/.github/workflows/ui-tests-2.yml
+++ b/.github/workflows/ui-tests-2.yml
@@ -27,11 +27,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libnss3 libxss1 libatk1.0-0 libcups2 libgbm1 libgtk-3-0 \
-            libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libxext6 \
-            libwoff1 libopus0 libwebp-dev libwebpdemux2 libevent-2.1-7 \
-            libgstreamer1.0-0 libgstreamer-plugins-base1.0-0 libegl1 libxtst6 \
-            libasound2t64
+            libnss3 libxss1 libatk1.0-0 libcups2 libgbm1 \
+            libgtk-4-1 libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libxext6 \
+            libwoff1 libopus0 libwebp6 libflite1 libavif16 libharfbuzz-icu0 \
+            libwayland-server0 libmanette-0.2-0 libhyphen0 libsecret-1-0 libgles2 libx264-163 \
+            libgstgl-1.0-0 libgstcodecparsers-1.0-0 libgraphene-1.0-0
 
       - name: Run UI tests
         run: |
